--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -28,7 +28,7 @@
             android:paddingBottom="@dimen/medium_padding"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/colorTextPrimary"
+            android:textColor="@color/colorAccent"
             android:textSize="36sp"
             app:layout_constraintTop_toBottomOf="@id/movie_title_divider"
             tools:text="I AM A MOVIE THAT IS AWESOME" />
@@ -37,12 +37,11 @@
             android:id="@+id/movie_details_poster"
             android:layout_width="@dimen/poster_width"
             android:layout_height="@dimen/poster_height"
-            android:layout_marginTop="@dimen/large_margin"
             android:layout_marginStart="@dimen/large_margin"
+            android:layout_marginTop="@dimen/large_margin"
             android:contentDescription="@string/movie_poster"
-            app:layout_constraintBottom_toBottomOf="@+id/movie_details_container"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/movie_details_title" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_title" />
 
         <RelativeLayout
             android:id="@+id/movie_details_container"
@@ -57,14 +56,13 @@
                 android:id="@+id/movie_details_release_date_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/no_margin"
+                android:layout_marginBottom="@dimen/small_margin"
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/large_margin"
                 android:gravity="center"
-                android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/release_date"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textStyle="italic" />
 
             <TextView
@@ -77,7 +75,6 @@
                 android:layout_marginTop="@dimen/small_margin"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:gravity="center"
-                android:paddingBottom="@dimen/medium_padding"
                 tools:text="10/19/2003" />
 
             <TextView
@@ -85,14 +82,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_details_release_date"
-                android:layout_marginBottom="@dimen/no_margin"
+                android:layout_marginBottom="@dimen/small_margin"
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/large_margin"
                 android:gravity="center"
-                android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/user_rating"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textStyle="italic" />
 
             <TextView
@@ -104,7 +100,6 @@
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
                 android:layout_marginTop="@dimen/small_margin"
-                android:paddingBottom="@dimen/medium_padding"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="8.1/10" />
 
@@ -113,14 +108,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/movie_details_rating"
-                android:layout_marginBottom="@dimen/no_margin"
+                android:layout_marginBottom="@dimen/small_margin"
                 android:layout_marginLeft="@dimen/large_margin"
                 android:layout_marginRight="@dimen/large_margin"
-                android:layout_marginTop="@dimen/large_margin"
+                android:layout_marginTop="@dimen/small_margin"
                 android:gravity="center"
-                android:paddingBottom="@dimen/medium_padding"
                 android:text="@string/favorite"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textStyle="italic" />
 
             <ImageView
