--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/movie_review_author"
+    <ImageView
+        android:id="@+id/trailer_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/medium_margin"
         android:layout_marginEnd="@dimen/medium_margin"
         android:layout_marginStart="@dimen/large_margin"
         android:layout_marginTop="@dimen/medium_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:text="Meredith Bayne" />
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/ic_play_arrow_black"
+        android:contentDescription="@string/play_trailer_button" />
 
     <TextView
-        android:id="@+id/movie_review_description"
+        android:id="@+id/trailer_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/trailer_play"
+        android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/large_margin"
+        android:layout_marginEnd="@dimen/medium_margin"
         android:layout_marginStart="@dimen/large_margin"
+        android:layout_marginTop="@dimen/medium_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:text="This is a review of a movie that I liked I guess, whatever see it !!!!!!!!!!" />
+        tools:text="This is a trailer for the movie"/>
 
     <View
         android:id="@+id/review_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="@dimen/large_margin"
+        android:layout_below="@+id/trailer_play"
+        android:layout_margin="@dimen/medium_margin"
         android:background="@color/colorLight" />
 
-</LinearLayout>
+</RelativeLayout>
